Trying to fix screen flicker
Added some CSS code to try and stop screen flicker on page change.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,3 +1,15 @@
+/*The following CSS is used to try and resolve the flickering between page transitions*/
+* {
+     margin: 0 auto;
+    -webkit-transform: translateZ(0);
+}
+.ui-page /*from: http://stackoverflow.com/questions/5953753/flickering-when-navigating-between-pages*/
+{
+    height: 100% !important;
+	-webkit-backface-visibility: hidden;
+}
+/*END of flickering fix*/
+
 .ui-li-has-count .ui-li-count {
 font-size: 12px;
 }
